# hack-toy-apps

./: .gitignore  DOCUMENTATION.md  README.md  build-flatpak.sh  generate_manifest  manifest.json.in  meson.build  meson_options.txt  runner.in
com.endlessm.Facecook/app/: Selfie.js  SelfieGUI.js  index.html  previous - temp PlayMyFace.js
com.endlessm.Fizzics/: README.md  package-lock.json  package.json  tps.sh  tslint.json
com.endlessm.Fizzics/app/: Ball.js  FallbackSoundAPI.js  Flinger.js  Game.js  GameLevels.json  HackyBalls.js  HackyBallsGUI.js  TEMPSoundAPI.js  Tools.js  index.html  main.js
com.endlessm.Fizzics/data/: app.desktop  appdata.xml
com.endlessm.Fizzics/scripts/: generateAssetsClass.js  phaserCustomBuild.js
com.endlessm.Fizzics/src/: FizzicsFacade.d.ts  FizzicsFacade.ts  FizzicsGame.ts  assetLoader.ts  assets.ts  endless.ts  index.d.ts  index.ts
com.endlessm.Gobble/app/: continueScene.js  gameOverScene.js  index.html  levelScene.js  main.js  overlayScene.js  parameters.js  startScene.js  titleScene.js  utils.js  widgets.js
com.endlessm.Gobble/data/: app.desktop  appdata.xml
com.endlessm.HackUnlock/app/: Unlock.js  UnlockGUI.js  UnlockParameters.js  index.html  run.py  style.css  unlock notes.rtf
com.endlessm.HackUnlock/data/: app.desktop  app.service  appdata.xml  com.endlessm.WelcomeApp.service.in  metadata.json
com.endlessm.LightSpeed/app/: .eslintrc.yml  backgroundScene.js  continueScene.js  debugScene.js  gameOverScene.js  index.html  levelScene.js  main.js  overlayScene.js  parameters.js  pauseScene.js  ship.js  startScene.js  titleScene.js  userScope.js  utils.js  widgets.js
com.endlessm.LightSpeed/data/: app.desktop  appdata.xml
com.endlessm.OperatingSystemApp/app/: animation.js  clock.js  custom.css  flip.js  index.html
com.endlessm.OperatingSystemApp/data/: app.desktop  appdata.xml  metadata.json
com.endlessm.RileyMaze/data/: app.desktop  appdata.xml
com.endlessm.Sidetrack/app/: index.html
com.endlessm.Sidetrack/data/: app.desktop  appdata.xml
com.endlessm.WelcomeApp/app/: Unlock.js  UnlockTestGUI.js  do list for unlock app.rtf  index.html
com.endlessm.hackyballs/app/: Ball.js  Flinger.js  Hack | Hacking Toolbox Parameters - Google Sheets.webloc  HackyBalls.js  HackyBallsGUI.js  do.rtf  index.html  run.py
com.endlessm.hackyballs/data/: app.desktop  appdata.xml
com.hack_computer.Clubhouse.OperatingSystemApp/app/: animation.js  index.html
com.hack_computer.Clubhouse.OperatingSystemApp/data/: app.desktop  appdata.xml
com.hack_computer.Clubhouse.Sidetrack/app/: index.html  pauseToyApp.js  phaser.min.js
com.hack_computer.Clubhouse.Sidetrack/data/: app.desktop  appdata.xml
com.hack_computer.Fizzics/: README.md  coding.md  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json  tslint.json
com.hack_computer.Fizzics/app/: Ball.js  Flinger.js  Game.js  HackyBalls.js  Tools.js  index.html  main.js
com.hack_computer.Fizzics/config/: webpack.config.js  webpack.parts.config.js  webpack.phaser.config.js
common/: pauseToyApp.js  styles.css
phaser/: phaser-3.17.0.min.js
template/: app.css  app.js  app.py  app.ui  clubhouse.py  gamestateservice.py  hackapps.py  soundserver.py  system.py  topbar.ui
tools/: svg2path.c
(+513 files in other folders)
